--- a/app/package.json
+++ b/app/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@binance-chain/javascript-sdk": "^4.2.0",
     "@drizzle/react-components": "^1.5.1",
     "@drizzle/react-plugin": "^1.5.1",
     "@drizzle/store": "^1.5.1",
+    "@ensdomains/address-encoder": "^0.2.16",
     "@reduxjs/toolkit": "^1.8.0",
+    "bech32-buffer": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
