--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "hardhat test test/Lender.test.ts --fulltrace",
+    "test": "hardhat test test/EquityFund.test.ts --fulltrace",
     "dev": "npm-watch"
   },
   "repository": {
