--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "hardhat test test/StakingVault.test.ts --fulltrace",
+    "test": "hardhat test",
+    "test:trace": "hardhat test --fulltrace",
     "dev": "npm-watch"
   },
   "repository": {
