--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.2",
     "hardhat": "2.9.2",
+    "hardhat-deploy": "^0.11.4",
     "hardhat-gas-reporter": "^1.0.8",
     "npm-watch": "^0.11.0",
     "prettier": "^2.6.0",
