--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,12 @@ typechain
 cache
 artifacts
 secrets.json
-/out
+
+# Compiler files
+cache/
+out/
+
+# Ignores development broadcast logs
+!/broadcast
+/broadcast/*
+/broadcast/*/31337/
